# termpaint

./: .cirrus.yml  .gitattributes  .gitignore  COPYING  README.md  charclassification.inc  charclassification_konsole_2018.inc  charclassification_konsole_2022.inc  debugwin.py  filetoinc.py  inputevents.cpp  meson.build  meson_options.txt  playground.c  playground2.cpp  termpaint.c  termpaint.h  termpaint.symver  termpaint_char_width.h  termpaint_compiler.h  termpaint_event.c  termpaint_event.h  termpaint_hash.h  termpaint_image.cpp  termpaint_image.h  termpaint_image.symver  termpaint_input.c  termpaint_input.h  termpaint_utf8.h  termpaintx.c  termpaintx.h  termpaintx_ttyrescue.c  termpaintx_ttyrescue.h  termquery.cpp  ttyrescue.c  ttyrescue_mini.c  ttyrescue_nolibc.c
demo/: attrs.c  chars.c  detect.c  life.c  shuffle.c  textwrap.c
doc/: attributes.rst  callback-event-handling.c  check.py  conf.py  details.rst  events.rst  getting-started.c  getting-started.rst  image.rst  index.rst  integration.rst  keys.rst  measuring.rst  requirements.txt  surface.rst  sync-event-handling.c  terminal.rst  termpaint_input.rst  termpaintx.rst
doc/_static/: custom.css
doc/_templates/: genindex.html  genindex.html.license  navigation.html
tests/: catch_main.cpp  fingerprintingtests.cpp  hashtest.cpp  input_tests.cpp  input_tests.json  input_tests_pin.py  libfuzz_input.c  measurement_tests.cpp  stdin_input.c  surface.cpp  terminal_misc.cpp  terminaloutput.cpp  terminaloutput.h  terminaloutput_main.cpp  testhelper.h  utf8_tests.cpp
tools/: SshServer.cpp  SshServer.h  check_symbols.py  collect-response.py  fingerprinting.dia  keyboardcollector-data.json  keyboardcollector.cpp  mcheck.cpp
